--- a/config.json
+++ b/config.json
@@ -34,6 +34,14 @@
                 0.68,
                 0.66
             ],
+            "upgradeSpeed": [
+                10,
+                10,
+                10,
+                10,
+                10,
+                10
+            ],
             "cost": [
                 {
                     "sticks": 100,
@@ -79,6 +87,14 @@
                 6.0,
                 10.0
             ],
+            "upgradeSpeed": [
+                10,
+                10,
+                10,
+                10,
+                10,
+                10
+            ],
             "cost": [
                 {
                     "sticks": 100,
@@ -117,6 +133,11 @@
                 2.5,
                 5.0,
                 12.5
+            ],
+            "upgradeSpeed": [
+                10,
+                10,
+                10
             ],
             "cost": [
                 {
