--- a/config.json
+++ b/config.json
@@ -22,10 +22,10 @@
             "productionSpeed": 10000
         }
     },
-    "militaryBuildings": {
+    "buildings": {
         "barracks": {
             "maxLevel": 6,
-            "multiplier": [
+            "trainingMultiplier": [
                 1.0,
                 0.9,
                 0.8,
@@ -73,12 +73,10 @@
                 "swordsmen": true,
                 "god": false
             }
-        }
-    },
-    "economicBuildings": {
+        },
         "mines": {
             "maxLevel": 6,
-            "multiplier": [
+            "resourceMultiplier": [
                 1.0,
                 1.5,
                 2.0,
@@ -128,7 +126,7 @@
         },
         "mason": {
             "maxLevel": 3,
-            "multiplier": [
+            "resourceMultiplier": [
                 1.0,
                 2.5,
                 5.0,
