Add event processing of arrival (#13)
++ create a draft of what is required to arrival event processing
++ adapt some previously done functions
++ check things on the roadmap

--- a/config.json
+++ b/config.json
@@ -7,7 +7,12 @@
             "cost": {
                 "sticks": 10,
                 "circles": 1
-            }
+            },
+            "stats": {
+                "pierce": 10,
+                "slash": 10
+            },
+            "carryCapacity": 10
         },
         "swordsmen": {
             "speed": 1.2,
@@ -15,7 +20,12 @@
             "cost": {
                 "sticks": 15,
                 "circles": 5
-            }
+            },
+            "stats": {
+                "pierce": 15,
+                "slash": 5
+            },
+            "carryCapacity": 10
         },
         "god": {
             "speed": 1000,
